--- a/app/design/frontend/gs-default/default/template/page/html/footer.phtml
+++ b/app/design/frontend/gs-default/default/template/page/html/footer.phtml
@@ -13,9 +13,9 @@
 		<?php echo $this->getChildHtml('cms_footer_links') ?>
 	</ul>
 	<div class="social_icons">
-		<div class="icons_block"><img src="images/social_in.png" alt="" /></div>
-		<div class="icons_block"><img src="images/social_twitter.png" alt="" /></div>
-		<div class="icons_block" style="padding:0px;"><img src="images/social_fb.png" alt="" /></div>
+		<div class="icons_block"><img src="<?php echo $this->getSkinUrl('images/social_in.png');?>" alt="" /></div>
+		<div class="icons_block"><img src="<?php echo $this->getSkinUrl('images/social_twitter.png');?>" alt="" /></div>
+		<div class="icons_block" style="padding:0px;"><img src="<?php echo $this->getSkinUrl('images/social_fb.png');?>" alt="" /></div>
 	</div>
 	<div class="clear"></div>
 </div>
