--- a/app/design/frontend/gs-default/default/layout/page.xml
+++ b/app/design/frontend/gs-default/default/layout/page.xml
@@ -32,7 +32,7 @@ Default layout, loads most of the pages
 
     <default translate="label" module="page">
         <label>All Pages</label>
-        <block type="page/html" name="root" output="toHtml" template="page/2columns-left.phtml">
+        <block type="page/html" name="root" output="toHtml" template="page/gs-2columns-left.phtml">
 
             <block type="page/html_head" name="head" as="head">
                 <action method="addJs"><script>prototype/prototype.js</script></action>
@@ -64,7 +64,8 @@ Default layout, loads most of the pages
             </block>
 
             <block type="page/html_notices" name="global_notices" as="global_notices" template="page/html/notices.phtml" />
-
+			
+			
             <block type="page/html_header" name="header" as="header">
                 <block type="core/text_list" name="top.menu" as="topMenu" translate="label">
                     <label>Navigation Bar</label>
@@ -88,7 +89,10 @@ Default layout, loads most of the pages
             </block>
 
             <block type="core/messages" name="global_messages" as="global_messages"/>
+			
             <block type="core/messages" name="messages" as="messages"/>
+			
+			<block type="page/html_breadcrumbs" name="breadcrumbs" as="breadcrumbs"/>
 
             <block type="core/text_list" name="content" as="content" translate="label">
                 <label>Main Content Area</label>
@@ -168,7 +172,7 @@ Default layout, loads most of the pages
     <page_two_columns_left translate="label">
         <label>All Two-Column Layout Pages (Left Column)</label>
         <reference name="root">
-            <action method="setTemplate"><template>page/2columns-left.phtml</template></action>
+            <action method="setTemplate"><template>page/gs-2columns-left.phtml</template></action>
             <!-- Mark root page block that template is applied -->
             <action method="setIsHandle"><applied>1</applied></action>
             <action method="setLayoutCode"><name>two_columns_left</name></action>
