--- a/app/design/frontend/gs-default/default/template/page/html/footer.phtml
+++ b/app/design/frontend/gs-default/default/template/page/html/footer.phtml
@@ -1,11 +1,5 @@
 <div id="footer_1">
-	<div class="pcontent">
-		<form action="" method="get">
-			<span>Sign up for latest news from The Girl in the Green Scarf</span>
-			<input type="text" value="Enter your email address here" />
-			<input name="submit" type="button" id="submit" value="Submit" />
-		</form>
-	</div>
+	<?php echo $this->getChildHtml('newsletter') ?>
 </div>
 <div id="footer_2">
 	<ul>
