- added minisearch in header

--- a/app/design/frontend/gs-default/default/template/page/html/header.phtml
+++ b/app/design/frontend/gs-default/default/template/page/html/header.phtml
@@ -17,10 +17,13 @@
 		<?php echo $this->getChildHtml('topMenu') ?>
 	</ul>
 	<div class="search">
+		<!--
 		<form action="" method="get">
 			<input name="" type="text" />
 			<input name="search" type="button" id="search" value="Search" />
 		</form>
+		-->
+		<?php echo $this->getChildHtml('topSearch'); ?>
 	</div>
 </div>
 
