- added ajax cart  pro to gs-default package - fixed ajax cart pro in gs-default package (js,template) - added cart recent items status in the header with sliding functionality. --- functionality: 70% --- template: 90%

--- a/app/design/frontend/gs-default/default/template/adjnav/layer.phtml
+++ b/app/design/frontend/gs-default/default/template/adjnav/layer.phtml
@@ -103,7 +103,11 @@ if ('function' == typeof(sns_layer_add_attr))
 {
     sns_layer_add_attr();
 }
-adj_nav_toolbar_init();
+
+document.observe("dom:loaded", function() {
+   adj_nav_toolbar_init();
+});
+
 </script>
 
 <?php
