--- a/app/design/frontend/gs-default/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/gs-default/default/template/catalog/product/list.phtml
@@ -86,7 +86,11 @@
         </li>
 		<?php */ ?>
 		<li>
-			<div class="img_product"><img alt="" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(135); ?>"></div>
+			<div class="img_product">
+				<a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>">
+					<img alt="" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(135); ?>" width="135" height="135"/>
+				</a>
+			</div>
 			<?php $_productNameStripped = $this->stripTags($_product->getName(), null, true); ?>
 			<div class="name_product"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $_productNameStripped; ?>" ><?php echo $_helper->productAttribute($_product, $_product->getName() , 'name'); ?></a></div>
 			<div class="price_product">
