- added auto slide down animation when new item added to cart.

--- a/app/design/frontend/gs-default/default/layout/local.xml
+++ b/app/design/frontend/gs-default/default/layout/local.xml
@@ -56,4 +56,10 @@
 		</reference>
 	</customer_logged_in>
 
+    <catalog_product_view>
+        <reference name="root">
+            <action method="setTemplate"><template>page/gs-2columns-right.phtml</template></action>
+        </reference>
+    </catalog_product_view>
+
 </layout>
