--- a/app/design/frontend/gs-default/default/template/page/html/header.phtml
+++ b/app/design/frontend/gs-default/default/template/page/html/header.phtml
@@ -15,7 +15,7 @@
 </div>
 <div class="navigation">
 	<ul id="nav">
-		<li><a href="#"<?php if ($this->getIsHomePage()):?> class="active"<?php endif; ?>>HOME</a></li>
+		<li><a href="<?php echo $this->getUrl('') ?>"<?php if ($this->getIsHomePage()):?> class="active"<?php endif; ?>>HOME</a></li>
 		<?php echo $this->getChildHtml('topMenu') ?>
 	</ul>
 	<div class="search">
